setting up error page

--- a/public/error.handlebars
+++ b/public/error.handlebars
@@ -3,8 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Error! || EsmFamil</title>
+    <title>Error! | EsmFamil</title>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+    <div class="alert alert-danger" role="alert">
+      <h4 class="alert-heading">Error! 😐</h4>
+      <p>{{errMsg}}</p>
+      <hr>
+      <p class="mb-0">{{tip}}</p>
+    </div>
+   </div>
+
+  </body>
 </html>
